--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <title>mediacodec.wasm</title>
     <meta charset="UTF-8" />
-    <script src="test.js" type="text/javascript"></script>
   </head>
   <body>
+    <ul>
+      <li><a href="audio-demo.html">Opus.wasm Encoder/Decoder Demo</a></li>
+    </ul>
   </body>
 </html>
